# AWS_Study_Lambda

./: README.md  index.html  lambda_function.py  pyproject.toml
